# api-productivity-planner

./: Cargo.toml  docker-compose.yaml
migrations/2020-11-07-231315_init_db/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
