[package]
name = "rust-api-productivity-api"
version = "0.1.0"
authors = ["Swann <swann@devloup.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
chrono = { version = "0.4.0", features = ["serde"] }
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.57"
